fix: adaptive menu, burger btn, blue bg btn on mobile size

--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ html, body{
     line-height: 1;
     font-size: 14px;
 }
-input, button, textarea{font-family: inherit; }
+input, button, textarea{font-family: inherit;  -webkit-tap-highlight-color: transparent; }
 input::-ms-clear{display: none;}
 button{cursor: pointer; outline: none; background: none;}
 button::-moz-focus-inner{padding: 0;border: 0;}
